<resources>
    <string name="app_name">新华BBC</string>
    <string name="hello_world">Hello world!</string>
    <string name="send">发送</string>
    <string name="action_settings">Settings</string>
    <string-array name="welcome_tips">
        <item >主人，奴婢在此等候多时了</item>
        <item >主人，近来一切可好</item>
        <item >亲爱的，我想死你了</item>
        <item >欢迎回来，我亲爱的主人。</item>
        <item >我是小猪机器人，很高兴为您服务</item>
    </string-array>
    <string name="a1">组长</string>
    <string name="a2">组员</string>
    <string name="a3">组员</string>
    <string name="a4">组员</string>
    <string name="a5">组员</string>
    <string name="a6">项目简介</string>
    <string name="a7">项目源码</string>
    <string name="a8">呼叫</string>
</resources>